--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,21 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+th {
+  min-width: 150px;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 1000px;
+  width: 1000px;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
   }
 }
 
@@ -22,6 +28,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+#crypto-table {
+  text-align: left;
 }
 
 .App-link {
